create menu dropdown in the right side

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap" rel="stylesheet"> 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -12,23 +15,141 @@
       <div class="center">
         <nav>
           <div class="logo">
-            <img src="/image/panda-logo.png" alt="logo" />
+            <img src="./image/panda-logo.png" alt="imagem de um panda com as iniciais da empresa">
           </div>
           <!--logo-->
           <div class="navigation">
             <div class="left">
               <ul>
-                <li><a href="#">OUR WORK</a></li>
-                <li><a href="#">PEOPLE</a></li>
-                <li><a href="#">PLACES</a></li>
-                <li><a href="#">WILDLIFE</a></li>
+                <li> 
+                  <a href="#">OUR WORK</a>
+                  <ul class="internal-menu-container-left">
+                    <div class="internal-menu-left">
+                      <li><a href="#">Climate</a></li>
+                      <li><a href="#">Food</a></li>
+                      <li><a href="#">Forests</a></i>
+                      <li><a href="#">Freshwater</a></i>
+                      <li><a href="#">Oceans</a></i>
+                      <li><a href="#">Wildlife</a></i>
+                    </div>
+                    <!--internal-menu-left-->
+                    <div class="internal-menu-right">
+                      <li><a href="#">Business</a></li>
+                      <li><a href="#">Policy</a></li>
+                      <li><a href="#">Partnerships</a></li>
+                      <li><a href="#">Science</a></li>
+                    </div>
+                    <!--internal-menu-right-->
+                    <div class="internal-menu-footer">
+                      <a href="#">
+                        <span>View all conservation work</span>
+                      </a>
+                      <i class="fas fa-chevron-right"></i>
+                    </div>
+                    <!--internal-menu-footer-->
+                  </ul>
+                  <!--internal-menu-container-left-->
+                </li>
+                <li>
+                  <a href="#">PEOPLE</a>
+                  <ul class="internal-menu-container-left">
+                    <div class="internal-menu-left">
+                      <li><a href="#">Humanitarian Partnerships</a></li>
+                      <li><a href="#">Local & Indigenious Communites</a></li>
+                      <li><a href="#">Racial justice</a></i>
+                      <li><a href="#">Safeguards</a></i>
+                      <li><a href="#">Social Policies</a></i>
+                      <li><a href="#">Woman & Girls</a></i>
+                    </div>
+                    <!--internal-menu-left-->
+                    <div class="internal-menu-right">
+                      <li><a href="#">Our Experts</a></li>
+                      <li><a href="#">Our Leaders</a></li>
+                      <li><a href="#">Work at WWF</a></li>
+                    </div>
+                    <!--internal-menu-right-->
+                    <div class="internal-menu-footer">
+                      <a href="#">
+                        <span>View our inclisive approach to conservation</span>
+                      </a>
+                      <i class="fas fa-chevron-right"></i>
+                    </div>
+                    <!--internal-menu-footer-->
+                  </ul>
+                  <!--internal-menu-container-left-->
+                </li>
+                <li>
+                  <a href="#">PLACES</a>
+                  <ul class="internal-menu-container-left">
+                    <div class="internal-menu-left">
+                      <li><a href="#">Amazon</a></li>
+                      <li><a href="#">Arctic</a></li>
+                      <li><a href="#">Borneo and Sumatra</a></i>
+                      <li><a href="#">Congo Basin</a></i>
+                      <li><a href="#">Coral Triangule</a></i>
+                      <li><a href="#">Eastern Himalayas</a></i>
+                      <li><a href="#">The Galapagos</a></i>
+                      <li><a href="#">Nothern Great Plains</a></i>
+                    </div>
+                    <!--internal-menu-left-->
+                    <div class="internal-menu-right">
+                      <li><a href="#">Travel with WWF</a></li>
+                      <li><a href="#">Habitats</a></li>
+                      <li><a href="#">Our Work Conserving Places</a></li>
+                    </div>
+                    <!--internal-menu-right-->
+                    <div class="internal-menu-footer">
+                      <a href="#">
+                        <span>View all wwf priority places</span>
+                      </a>
+                      <i class="fas fa-chevron-right"></i>
+                    </div>
+                    <!--internal-menu-footer-->
+                  </ul>
+                  <!--internal-menu-container-left-->
+                </li>
+                <li>
+                  <a href="#">WILDLIFE</a>
+                  <ul class="internal-menu-container-left">
+                    <div class="internal-menu-left">
+                      <li><a href="#">Giants Pandas</a></li>
+                      <li><a href="#">Tigers</a></li>
+                      <li><a href="#">Elephants</a></i>
+                      <li><a href="#">Gorillas</a></i>
+                      <li><a href="#">Sea Turtles</a></i>
+                      <li><a href="#">Polar Bears</a></i>
+                      <li><a href="#">Rhinos</a></i>
+                      <li><a href="#">Whales</a></i>
+                    </div>
+                    <!--internal-menu-left-->
+                    <div class="internal-menu-right">
+                      <li><a href="#">Animal Trivia Games</a></li>
+                      <li><a href="#">Symbolically Adopt an Animal</a></li>
+                      <li><a href="#">Edangered Species</a></li>
+                      <li><a href="#">Educational Resources</a></li>
+                    </div>
+                    <!--internal-menu-right-->
+                    <div class="internal-menu-footer">
+                      <a href="#">
+                        <span>View species</span>
+                      </a>
+                      <i class="fas fa-chevron-right"></i>
+                    </div>
+                    <!--internal-menu-footer-->
+                  </ul>
+                  <!--internal-menu-container-left-->
+                </li>
               </ul>
             </div>
             <!--left-->
             <div class="right">
               <ul>
-                <li><a href="">About</a></li>
-                <li><a href="">How to help</a></li>
+                <li>
+                  <a href="">About</a>
+              </li>
+              <li><a href="">How to help</a>
+           
+              </li>
               </ul>
               <!--ul-->
               <input type="search" />
@@ -39,12 +160,14 @@
               <div class="donate">
                 <span>DONATE</span>
                 <!-- <i class="icon fas fa-minus"></i> -->
-                <i class="icon fas fa-plus"></i></div
-              ><!--div-donate-->
+                <i class="icon fas fa-plus"></i>
+              </div>
+              <!--div-donate-->
               <div class="adopt">
                 <span>ADOPT</span>
-                <i class="icon fas fa-plus"></i></div
-              ><!--div-adopt-->
+                <i class="icon fas fa-plus"></i>
+              </div>
+              <!--div-adopt-->
             </div>
             <!--right-->
           </div>
