create and style right side menu

--- a/index.html
+++ b/index.html
@@ -146,26 +146,61 @@
               <ul>
                 <li>
                   <a href="">About</a>
+                  <ul class="internal-menu-container-right">
+                    <li><a href="#">Who We Are</a></li>
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Leadership</a></li>
+                    <li><a href="#">Experts</a></li>
+                    <li><a href="#">News & Press</a></li>
+                    <li><a href="#">Financials</a></li>
+                    <li><a href="#">Carrers</a></li>
+                    <li><a href="#">Contact</a></li>
+                  </ul>
               </li>
               <li><a href="">How to help</a>
-           
+                <ul class="internal-menu-container-right">
+                  <li><a href="#">Get involved</a></li>
+                  <li><a href="#">Take Action</a></li>
+                  <li><a href="#">Get E-mail</a></li>
+                  <li><a href="#">Fundraise</a></li>
+                  <li><a href="#">Send Edcards</a></li>
+                  <li><a href="#">Travel with WWF</a></li>
+                  <li><a href="#">Gift & State Planning</a></li>
+                  <li><a href="#">See Other Ways to Support WWF</a></li>
+                </ul>
               </li>
               </ul>
               <!--ul-->
-              <input type="search" />
+              <input type="checkbox"  id="click">
               <div class="search">
-                <i class="icon fas fa-search"></i>
-              </div>
+                <label for="click">
+                  <i class="icon fas fa-search"></i>
+                  <input type="search" placeholder="Search" />
+                </label>
+                </div>
               <!--search-->
               <div class="donate">
                 <span>DONATE</span>
-                <!-- <i class="icon fas fa-minus"></i> -->
                 <i class="icon fas fa-plus"></i>
+                <!-- <i class="icon fas fa-minus"></i> -->
+                  <ul class="internal-menu-container-button-donate">
+                    <li><a href="#">Make a One-time Donation</a></li>
+                    <li><a href="#">Make a Monthly Donation</a></li>
+                    <li><a href="#">Become a Paperless Member</a></li>
+                    <li><a href="#">Renew Your Membership</a></li>
+                    <li><a href="#">Join as a Partner in Conservation</a></li>
+                  </ul>
               </div>
               <!--div-donate-->
               <div class="adopt">
                 <span>ADOPT</span>
                 <i class="icon fas fa-plus"></i>
+                  <ul class="internal-menu-container-button-adopt">
+                    <li><a href="#">Adoption</a></li>
+                    <li><a href="#">T-shirts</a></li>
+                    <li><a href="#">Socks</a></li>
+                    <li><a href="#">More Gifts</a></li>
+                  </ul>
               </div>
               <!--div-adopt-->
             </div>
