add hover transition in menu desktop

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div class="center">
         <nav>
           <div class="logo">
-            <img src="./image/panda-logo.png" alt="imagem de um panda com as iniciais da empresa">
+            <a href="./index.html">
+              <img src="./image/panda-logo.png" alt="imagem de um panda com as iniciais da empresa">
+            </a>
           </div>
           <!--logo-->
           <div class="navigation">
